src/styles/app.scss
// App: Styles for the entire application.

@use 'members' as *;

*,
::before,
::after {
    box-sizing: border-box;
    max-width: 100%;
}

:root,
#root {
    position: absolute;
    inset: 0;
    display: block;
    width: 100%;
    min-width: $xs;
    max-width: none;
    height: 100%;
    line-height: 1.5;
    font-family: $sans-serif;
    word-break: break-word;
    color-scheme: light dark;
    overflow: hidden;
}

:root {
	@include color-schemes using ($color) {
		background-color: $color;
	}
	background-image: var(--custom-wallpaper, none);
	background-attachment: fixed;
	background-size: cover;
}

#root {
	backdrop-filter: blur(6px) saturate(1.8);
	background-color: rgba($light, 0.6);
	color: $black;
	@include dark {
		background-color: rgba($dark, 0.8);
		color: $white;
	}
}

h1,
h2,
h3,
h4,
h5,
h6 {
    display: block;
    font-family: $display;
    line-height: 1.33;
    margin: size(-3) 0;
}

h1 {
    @include font-size(3);
}

h2 {
    @include font-size(2);
}

h3 {
    @include font-size(1);
}

h4 {
    @include font-size(0);
}

h5 {
    @include font-size(-1);
}

h6 {
    @include font-size(-2);
}

small,
sup,
sub {
    font-size: size(-1);
}

a[href] {
    &:not(:hover, :focus) {
        text-decoration-line: none;
    }
    @include color-schemes using ($color) {
        @include contrast using ($ratio) {
            color: contrast-color($primary, $color, $ratio);
        }
    }
}

// Custom scrollbar styling:

::-webkit-scrollbar {
	width: 14px;
	&-track {
		background-color: transparent;
	}
	&-thumb {
		border-radius: 8px;
		@include color-schemes using ($bg) {
			background-color: contrast-color($secondary, $bg, a11y(aa ui));
			border: 2px solid $bg;
		}
	}
}

